--- a/en/index.html
+++ b/en/index.html
@@ -195,15 +195,15 @@
                       The project aims 
                       <span class="bold"
                         >to create one of the best Organic and Vegan anti-ageing creams on the market</span
-                      >. Scheduled for <span class="bold">launch during the second semester of 2023</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
+                      >. Scheduled for <span class="bold">launch during the first semester of 2024</span>. This new generation cream, <span class="bold">sold exclusively online</span>, will be <span class="bold">made in Lyon, France</span>. Its formula will <span class="bold">mainly contain ingredients from the Auvergne-Rhône-Alpes region</span>.
                     </p>
-                      <p class="">
+                    <!-- <p class="">
                       <span class="bold">Designed and manufactured in Lyon</span> in renowned laboratories, it will represent a perfectly balanced union of advanced research in <span class="bold">dermatology</span>, 
                       <span class="bold">ease of use</span> associated with the greatest 
                       <span class="bold">skincare</span> products, the 
                       <span class="bold">best natural ingredients </span> and 
                       <span class="bold">respect for the planet</span>.
-                    </p>
+                    </p> -->
                   </article>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                     </p>
                       <p class="">
                       Nowadays, Lyon continues to be a centre of excellence in this field and hosts many internationally renowned laboratories and scientific organisations. 
-                      The project's ambition is to harness and build on this unique know-how <span class="bold">to create an outstanding product which combines the best of Science and Nature</span>.
+                      The project's ambition is to harness and build on this unique know-how <span class="bold">to create an outstanding product, developed and produced locally, which combines the best of Science and Nature</span>.
                     </p>
                   </article>
                 </div>
@@ -273,7 +273,9 @@
           <div class="a-propos-both">
             <h1 class="produit-title">MORE ABOUT OUR FUTURE PRODUCT</h1>
             <p class="produit-apropos-text">
-              It will be one of the <span class="bold">best Organic and Vegan anti-ageing creams</span> on the market.
+              It will be <span class="bold">one of the best Organic and Vegan anti-ageing creams</span> on the market.<br/>
+              <span class="bold">Developed and produced in Lyon, France,</span> it will be composed mainly of <span class="bold">ingredients from the Auvergne-Rhone-Alpes region</span>.
+
             </p>
           </div>
         </div>
@@ -378,7 +380,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-              This unique product will be sold exclusively online during the second semester of 2023 under the brand name "Les Laboratoires de <nobr>L'Antiquaille".</nobr>
+              This unique product will be sold exclusively online during the first semester of 2024 under the brand name "Les Laboratoires de <nobr>L'Antiquaille".</nobr>
               <br />This distribution model will allow the brand to have a direct link with its consumers while providing them with a unique shopping experience.
               </p>
             </div>
@@ -499,15 +501,14 @@
             <h1 class="timing-title">The timing</h1>
             <p class="timing-text">
               After completing the <span class="bold">"Lyon Start-Up" incubation programme</span> at the end of 2020, <span class="bold">"Les Laboratoires de L'Antiquaille" company was created in October 2021</span> by a group of private investors. 
-              Today, <span class="bold">the company has just launched its research and development programme</span> with the objective of developing the formula of its unique future anti-ageing skincare.
               In early 2022, the company benefited from the <span class="bold">support of BPI France with the award of a "Bourse French Tech" grant</span> destined to co-finance part of its innovation programme. 
-              It is <span class="bold">now supported by "Grow Up"</span>, a consultancy firm specialising in strategy and innovation financing for start-ups.              
+              <!-- It is <span class="bold">now supported by "Grow Up"</span>, a consultancy firm specialising in strategy and innovation financing for start-ups. -->
             </p>
             <p class="timing-text">
               The company and its founder participate in the various activities of <span class="bold">professional associations in the dermatology and dermo-cosmetics sector</span> both in the Lyon area (e.g. <span class="bold">Cosmet'In Lyon</span>) and on a national scale (e.g. <span class="bold">SFC / The French Society of Cosmetology</span>).
             </p>
             <p class="timing-text">
-              The "Laboratoires de L'Antiquaille" products are scheduled to be launched during the <span class="bold">second half of 2023</span>.
+              The "Laboratoires de L'Antiquaille" products will be launched throughout the <span class="bold">first half of 2024</span>.
             </p>
           </article>
         </div>
@@ -561,7 +562,7 @@
               data-aos-duration="1000"
               />
             </a>
-            <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
+            <!-- <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
                 alt="Grow Up"
@@ -570,7 +571,7 @@
               data-aos-delay="200"
               data-aos-duration="1000"
               />
-            </a>            
+            </a>             -->
             <a hreflang="en" href="https://www.bpifrance.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/bpi-france.png"
@@ -676,7 +677,7 @@
 
       <div class="copyright">
         <div class="copyright-text">
-          © 2020 Les Laboratoires de L’Antiquaille | Website designed by <nobr><a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> and <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a></nobr>
+          © 2022 Les Laboratoires de L’Antiquaille | Website designed by <nobr><a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> and <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a></nobr>
           <!-- <div class="copyright-links">
             <a href="#" class="copyright-link">Mentions légales</a>
             
