--- a/fr/index.html
+++ b/fr/index.html
@@ -216,22 +216,9 @@
                 <div class="article">
                   <article class="projet-article-paragraphe spacing">
                     <p class="">
-                      Le projet vise à
-                      <span class="bold"
-                        >créer l’une des meilleures crèmes de soin anti-âge 
-                        Bio et Vegan du marché</span
-                      >. Prévue pour un <span class="bold">lancement au cours du 2ème semestre 2023</span>,
-                      cette crème nouvelle génération sera <span class="bold">vendue exclusivement en E-Commerce</span>.
+                      Le projet vise à <span class="bold">créer l’une des meilleures crèmes de soin anti-âge Bio et Vegan du marché</span>. Prévue pour un <span class="bold">lancement au cours du 1er semestre 2024. Vendue exclusivement en E-commerce</span>, cette crème nouvelle génération sera <span class="bold">fabriquée en France à Lyon et sa formule sera majoritairement composée d’ingrédients issus de la région Auvergne-Rhône-Alpes.</span>
                     </p>
-                      <p class="">
-                      <span class="bold">Conçue et fabriquée en France à Lyon</span> dans des laboratoires
-                      de renom, elle symbolisera le mariage parfait entre la
-                      recherche avancée en <span class="bold">dermatologie</span>, le
-                      <span class="bold">confort d’utilisation</span> des plus grands soins
-                      dermo-cosmétiques, le meilleur des
-                      <span class="bold">ingrédients naturels</span> et la volonté de
-                      <span class="bold">respecter la planète</span>.
-                    </p>
+                    <!-- Conçue et fabriquée en France à Lyon dans des laboratoires de renom, elle symbolisera le mariage parfait entre la recherche avancée en dermatologie, le confort d’utilisation des plus grands soins dermo-cosmétiques, le meilleur des ingrédients naturels et la volonté de respecter la planète. -->
                   </article>
                 </div>
               </div>
@@ -275,11 +262,10 @@
                       la recherche lyonnaise en matière de dermatologie</span>.
                     </p>
                       <p class="">
-                      Aujourd’hui encore, Lyon est une place de référence dans ce domaine
-                      avec des laboratoires et des organismes scientifiques de
+                      Aujourd’hui encore, Lyon est une place de référence dans ce domaine avec des laboratoires et des organismes scientifiques de
                       renommée internationale. L’ambition du projet est de
                       mobiliser et de s’appuyer sur ce savoir-faire unique pour 
-                      <span class="bold">créer un produit d’excellence alliant le meilleur de la
+                      <span class="bold">créer un produit d'exception, développé et produit localement, alliant le meilleur de la
                       science et le meilleur de la nature</span>.
                     </p>
                   </article>
@@ -306,8 +292,9 @@
           <div class="a-propos-both">
             <h1 class="produit-title">à propos de notre futur produit</h1>
             <p class="produit-apropos-text">
-              Il s'agira de l'une des
-              <span class="bold">meilleures crèmes anti-âge Bio et Vegan</span> du marché.
+              Il s'agira de <span class="bold">l'une des
+              meilleures crèmes anti-âge Bio et Vegan du marché.</span><br/>
+              <span class="bold">Développée et produite en France à Lyon</span>, elle sera composée majoritairement <span class="bold">d’ingrédients de la région Auvergne-Rhône-Alpes.</span>
             </p>
           </div>
         </div>
@@ -422,7 +409,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 2ème semestre 2023 sous la marque « Les Laboratoires de <nobr>L’Antiquaille ».</nobr> 
+                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 1er semestre 2024 sous la marque « Les Laboratoires de <nobr>L’Antiquaille ».</nobr> 
                 <br /> Ce mode de distribution permettra à la marque d’avoir un lien direct avec ses consommateurs tout en leur faisant vivre une expérience d’achat unique.
               </p>
             </div>
@@ -554,16 +541,14 @@
             <h1 class="timing-title">Le timing</h1>
             <p class="timing-text">
               Après avoir suivi le <span class="bold">programme d’incubation « Lyon Start-Up »</span> fin 2020, <span class="bold">l’entreprise « Les Laboratoires de L’Antiquaille » a été créée en octobre 2021</span> par un groupe d’actionnaires privés. 
-              Aujourd’hui, <span class="bold">l’entreprise vient de lancer son programme de recherche et développement</span> en vue de mettre au point la formule de son futur soin anti-âge d’exception.
-              Elle a bénéficié début 2022 du <span class="bold">soutien de la BPI France avec l’obtention d’une « Bourse French Tech »</span> destinée à cofinancer une partie de son programme d’innovation. 
-              Elle est <span class="bold">actuellement accompagnée par « Grow Up »</span>, société de conseil en stratégie et financement de l’innovation pour les start-up.
+              Elle a bénéficié début 2022 du <span class="bold">soutien de la BPI France avec l’obtention d’une « Bourse French Tech »</span> destinée à cofinancer une partie de son programme d’innovation.
             </p>
             <p class="timing-text">
               L’entreprise et son fondateur participent aux différentes activités des <span class="bold">associations professionnelles du secteur de la dermatologie et de la dermo-cosmétique</span> tant sur la région lyonnaise 
               (ex. <span class="bold">Cosmet’In Lyon</span>) que sur un plan national (ex. <span class="bold">SFC / Société Française de Cosmétologie</span>).
             </p>  
             <p class="timing-text">
-              Le lancement des produits des « Laboratoires de L’Antiquaille » est prévu pour le <span class="bold">2ème semestre 2023</span>.
+              Le lancement des produits des « Laboratoires de L’Antiquaille » est prévu pour le <span class="bold">1er semestre 2024</span>.
             </p>
           </article>
         </div>
@@ -612,16 +597,6 @@
               <img
                 src="../assets/images/partenaires/cosmet_in_lyon.jpg"
                 alt="Cosmet'in Lyon"
-                class="featured__img"
-                data-aos="fade-up"
-              data-aos-delay="200"
-              data-aos-duration="1000"
-              />
-            </a>
-            <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
-              <img
-                src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
-                alt="Grow Up"
                 class="featured__img"
                 data-aos="fade-up"
               data-aos-delay="200"
@@ -736,7 +711,7 @@
 
       <div class="copyright">
         <div class="copyright-text">
-          © 2020 Les Laboratoires de L’Antiquaille | Site web réalisé par <nobr><a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> et <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a></nobr>
+          © 2022 Les Laboratoires de L’Antiquaille | Site web réalisé par <nobr><a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> et <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a></nobr>
           <!-- <div class="copyright-links">
             <a href="#" class="copyright-link">Mentions légales</a>
             
