--- a/en/index.html
+++ b/en/index.html
@@ -195,7 +195,7 @@
                       The project aims 
                       <span class="bold"
                         >to create one of the best Organic and Vegan anti-ageing creams on the market</span
-                      >. Scheduled for <span class="bold">launch during the first semester of 2024</span>. This new generation cream, <span class="bold">sold exclusively online</span>, will be <span class="bold">made in Lyon, France</span>. Its formula will <span class="bold">mainly contain ingredients from the Auvergne-Rhône-Alpes region</span>.
+                      >. Scheduled for <span class="bold">launch during the second semester of 2024</span>. This new generation cream, <span class="bold">sold exclusively online</span>, will be <span class="bold">made in Lyon, France</span>. Its formula will <span class="bold">mainly contain ingredients from the Auvergne-Rhône-Alpes region</span>.
                     </p>
                     <!-- <p class="">
                       <span class="bold">Designed and manufactured in Lyon</span> in renowned laboratories, it will represent a perfectly balanced union of advanced research in <span class="bold">dermatology</span>, 
@@ -381,7 +381,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-              This unique product will be sold exclusively online during the first semester of 2024 under the brand name "Les Laboratoires de <nobr>L'Antiquaille".</nobr>
+              This unique product will be sold exclusively online during the second semester of 2024 under the brand name "Les Laboratoires de <nobr>L'Antiquaille".</nobr>
               <br />This distribution model will allow the brand to have a direct link with its consumers while providing them with a unique shopping experience.
               </p>
             </div>
@@ -502,15 +502,18 @@
             <h1 class="timing-title">The timing</h1>
             <p class="timing-text">
               After completing the <span class="bold">"Lyon Start-Up" incubation programme</span> at the end of 2020, the project leader <span class="bold">officially created "Les Laboratoires de L'Antiquaille" in October 2021</span> with the help of a group of private shareholders. 
-              The company then received <span class="bold">support from BPI France in early 2022, with the award of a "Bourse French Tech” grant</span> to co-finance part of its <span class="bold">innovation programme</span>. 
+             </p>
+              
+            <p class="timing-text">
+              <span class="bold">In early 2022</span>, the company received a <span class="bold">financial support from BPI France</span>, with the award of a "Bourse French Tech" grant to co-finance part of its innovation programme. This programme continued throughout 2023, and the company is now preparing for the <span class="bold">commercial launch of its products scheduled for the 2nd half of 2024</span>.
               <!-- It is <span class="bold">now supported by "Grow Up"</span>, a consultancy firm specialising in strategy and innovation financing for start-ups. -->
             </p>
             <p class="timing-text">
               "Les Laboratoires de L'Antiquaille" and its founder participate in the various activities of <span class="bold">professional associations in the dermatology and dermo-cosmetics sector</span>, both in the Lyon area (e.g. <span class="bold">Cosmet'In Lyon</span>) and nationally (e.g. <span class="bold">Société Française de Cosmétologie - SFC</span>).
             </p>
-            <p class="timing-text">
+            <!-- <p class="timing-text">
               The "Laboratoires de L'Antiquaille" products will be launched throughout the <span class="bold">1st half of 2024</span>.
-            </p>
+            </p> -->
           </article>
         </div>
 
