--- a/fr/index.html
+++ b/fr/index.html
@@ -216,7 +216,7 @@
                 <div class="article">
                   <article class="projet-article-paragraphe spacing">
                     <p class="">
-                      Le projet vise à <span class="bold">créer l’une des meilleures crèmes de soin anti-âge Bio et Vegan du marché</span>. Prévue pour un <span class="bold">lancement au cours du 1er semestre 2024. Vendue exclusivement en E-commerce</span>, cette crème nouvelle génération sera <span class="bold">fabriquée en France à Lyon et sa formule sera majoritairement composée d’ingrédients issus de la région Auvergne-Rhône-Alpes.</span>
+                      Le projet vise à <span class="bold">créer l’une des meilleures crèmes de soin anti-âge Bio et Vegan du marché</span>. Prévue pour un <span class="bold">lancement au cours du 2ème semestre 2024. Vendue exclusivement en E-commerce</span>, cette crème nouvelle génération sera <span class="bold">fabriquée en France à Lyon et sa formule sera majoritairement composée d’ingrédients issus de la région Auvergne-Rhône-Alpes.</span>
                     </p>
                     <!-- Conçue et fabriquée en France à Lyon dans des laboratoires de renom, elle symbolisera le mariage parfait entre la recherche avancée en dermatologie, le confort d’utilisation des plus grands soins dermo-cosmétiques, le meilleur des ingrédients naturels et la volonté de respecter la planète. -->
                   </article>
@@ -411,7 +411,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 1er semestre 2024 sous la marque « Les Laboratoires de <nobr>L’Antiquaille ».</nobr> 
+                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 2ème semestre 2024 sous la marque « Les Laboratoires de <nobr>L’Antiquaille ».</nobr> 
                 <br /> Ce mode de distribution permettra à la marque d’avoir un lien direct avec ses consommateurs tout en leur faisant vivre une expérience d’achat unique.
               </p>
             </div>
@@ -542,16 +542,18 @@
           data-aos-duration="1000">
             <h1 class="timing-title">Le timing</h1>
             <p class="timing-text">
-              Après avoir suivi le <span class="bold">programme d’incubation « Lyon Start-Up »</span> fin 2020, le porteur du projet <span class="bold">a officiellement créé « Les Laboratoires de L’Antiquaille » en octobre 2021</span> avec l’aide d’un groupe d’actionnaires privés.
-              L'entreprise a ensuite bénéficié début 2022 du <span class="bold">soutien de la BPI France avec l’obtention d’une « Bourse French Tech »</span> destinée à cofinancer une partie de son <span class="bold">programme d’innovation</span>.
+              Après avoir suivi le <span class="bold">programme d’incubation « Lyon Start-Up »</span> fin 2020, le porteur du projet <span class="bold">a officiellement créé « Les Laboratoires de L’Antiquaille » en octobre 2021</span> avec l’aide d’un groupe d’actionnaires privés.            
+            </p>
+            <p class="timing-text">  
+              L'entreprise a bénéficié en 2022 du <span class="bold">soutien de la BPI France avec l’obtention d’une « Bourse French Tech »</span> destinée à cofinancer une partie de son <span class="bold">programme d’innovation</span>. Ce programme s’est poursuivi sur toute l’année 2023 et l’entreprise se prépare aujourd’hui au <span class="bold">lancement commercial de ses produits pour le 2ème semestre 2024</span>.
             </p>
             <p class="timing-text">
               « Les Laboratoires de L’Antiquaille » et son fondateur participent aux différentes activités des <span class="bold">associations professionnelles du secteur de la dermatologie et de la dermo-cosmétique</span> tant sur la région lyonnaise 
               (ex. <span class="bold">Cosmet’In Lyon</span>) que sur un plan national (ex. <span class="bold">SFC / Société Française de Cosmétologie</span>).
             </p>  
-            <p class="timing-text">
+            <!-- <p class="timing-text">
               Le lancement des produits des « Laboratoires de L’Antiquaille » est prévu pour se dérouler tout au long du <span class="bold">1<sup>er</sup> semestre 2024</span>.
-            </p>
+            </p> -->
           </article>
         </div>
 
